syntax = "proto3";

package sneaker_service.service;

import "google/api/annotations.proto";
import "service/sneaker_service/model/v1/sneaker.proto";

option go_package = "github.com/olzzhas/grpc-sneakershop/service/sneaker_service/service;proto_sneaker_service";

service SneakerService {
  rpc GetSneakers(GetSneakersRequest) returns (GetSneakersResponse){
    option (google.api.http) = {
      get: "/v1/get-sneakers"
    };
  }

  rpc UpdateSneaker(UpdateSneakerRequest) returns(UpdateSneakerResponse){
    option (google.api.http) = {
      patch: "/v1/update-sneaker/{id}"
      body: "*"
    };
  }
}

// Request for get sneakers.
message GetSneakersRequest{
  string model = 1;
  uint32 price = 2;
}

// Response for get sneakers.
message GetSneakersResponse{
  repeated model.Sneaker sneaker = 1;
}

// Request for update sneaker.
message UpdateSneakerRequest{
  string id = 1;
  string model = 2;
  uint32 price = 3;
}

// Response for update sneaker.
message UpdateSneakerResponse{
  model.Sneaker sneaker = 1;
}